--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="warrper">
       
     <div>
-        <button onclick="location.href='http://localhost:52330/myProject/randomNumber/randomNumber.html'" class="links">
+        <button onclick="location.href=shovaleinat.github.io/Random-Number'" class="links">
             Go to Random Number Generator
         </button>
     </div>
@@ -24,7 +24,7 @@
     <h2>--------------------------</h2>
 
     <div>
-        <button onclick="location.href='http://localhost:52330/myProject/wordQuiz/wordQuiz.html'" class="links">
+        <button onclick="location.href=shovaleinat.github.io/Word-Quiz'" class="links">
             Go to Word Quiz
         </button>
     </div>
@@ -32,7 +32,7 @@
     <h2>--------------------------</h2>
 
     <div>
-        <button onclick="location.href='http://localhost:52330/myProject/mathGame/mathGame.html'" class="links">
+        <button onclick=location.href=shovaleinat.github.io/Math-Game class="links">
             Go to Math Game
         </button>
     </div>
