--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
      
     <h1 id="Welcome">Welcome to Shoval's websites</h1>
-    <h2 id="onlyC"><U>Websites</U><br> --------------------------</h2>
+    <h2 id="Websites"><U>Websites</U><br> --------------------------</h2>
 
     <div id="warrper">
       
     <div>
-        <button onclick="location.href='shovaleinat.github.io/Math-Game'" class="links">
+        <button onclick="location.href='shovaleinat.github.io/Random-Number'" class="links">
             Go to Random Number Generator
         </button>
     </div>
@@ -24,7 +24,7 @@
     <h2>--------------------------</h2>
 
     <div>
-        <button onclick="location.href='shovaleinat.github.io/Math-Game'" class="links">
+        <button onclick="location.href='shovaleinat.github.io/Word-Quiz'" class="links">
             Go to Word Quiz
         </button>
     </div>
