--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
 
     <div id="warrper">
       
-    <div>
-        <button onclick="location.href='shovaleinat.github.io/Random-Number'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Random-Number'" class="links">
             Go to Random Number Generator
-        </button>
-    </div>
+        </button>        
     
     <h2>--------------------------</h2>
 
     <div>
-        <button onclick="location.href='shovaleinat.github.io/Word-Quiz'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Word-Quiz'" class="links">
             Go to Word Quiz
         </button>
     </div>
@@ -32,7 +30,7 @@
     <h2>--------------------------</h2>
 
     <div>
-        <button onclick="location.href='shovaleinat.github.io/Math-Game'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Math-Game'" class="links">
             Go to Math Game
         </button>
     </div>
