--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
             Go to Math Game
         </button>
     </div>
+        
+    <h2>--------------------------</h2>
+        
+    <div>
+        <button onclick="location.href='https://shovaleinat.github.io/Connect-4'" class="links">
+            Go to Connect 4
+        </button>
+    </div>
 
     </div>
 </body>
