--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
             Go to Connect 4
         </button>
     </div>
+        
+    <h2>--------------------------</h2>
+
+    <div>
+        <button onclick="location.href='https://shovaleinat.github.io/Chess-Clock'" class="links">
+            Go to Chess Clock
+        </button>
+    </div>
 
     </div>
 </body>
