--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h2>--------------------------</h2>
 
     <div>
-        <button onclick="location.href='https://shovaleinat.github.io/Chess-Clock'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Chess-Timer'" class="links">
             Go to Chess Clock
         </button>
     </div>
