--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div>
         <button onclick="location.href='https://shovaleinat.github.io/Chess-Timer'" class="links">
-            Go to Chess Clock
+            Go to Chess Timer
         </button>
     </div>
 
