--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <h2>--------------------------</h2>
 
     <div>
-        <button onclick="location.href='https://shovaleinat.github.io/Chess-Timer'" class="links">
-            Go to Chess Timer
+        <button onclick="location.href='https://shovaleinat.github.io/Guess-The-Number'" class="links">
+            Go to Guess The Number
         </button>
     </div>
 
