--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <h2>--------------------------</h2>
 
     <div>
-        <button onclick="location.href='https://shovaleinat.github.io/Chess-Clock'" class="links">
-            Go to Chess Clock
+        <button onclick="location.href='https://shovaleinat.github.io/Chess-Timer'" class="links">
+            Go to Chess Timer
         </button>
     </div>
 
