--- a/index.html
+++ b/index.html
@@ -13,48 +13,51 @@
     <h1 id="Welcome"><u><b>Shoval's websites</b></u></h1>
 
     <div id="warrper">
-      
-        <button onclick="location.href='https://shovaleinat.github.io/Random-Number'" class="links">
+        <h2>--------------------------</h2>
+        <button onclick="location.href='https://shovaleinat.github.io/Random-Number-Generator'" class="links">
             Go to Random Number Generator
         </button>        
     
-    <h2>--------------------------</h2>
-
     <div>
-        <button onclick="location.href='https://shovaleinat.github.io/Word-Quiz'" class="links">
+        <h2>--------------------------</h2>
+        <button onclick="location.href='https://shovaleinat.github.io/Word-Quiz/'" class="links">
             Go to Word Quiz
         </button>
     </div>
 
-    <h2>--------------------------</h2>
-
     <div>
+        <h2>--------------------------</h2>
         <button onclick="location.href='https://shovaleinat.github.io/Math-Game'" class="links">
             Go to Math Game
         </button>
     </div>
 
-    <h2>--------------------------</h2>
-
     <div>
+        <h2>--------------------------</h2>
         <button onclick="location.href='https://shovaleinat.github.io/Connect-4'" class="links">
             Go to Connect 4
         </button>
     </div>
 
-    <h2>--------------------------</h2>
-
     <div>
-        <button onclick="location.href='https://shovaleinat.github.io/Chess-Timer'" class="links">
-            Go to Chess Timer
+        <h2>--------------------------</h2>
+        <button onclick="location.href='https://shovaleinat.github.io/Chess-Clock'" class="links">
+            Go to Chess Clock
         </button>
     </div>
 
-    <h2>--------------------------</h2>
 
     <div>
+        <h2>--------------------------</h2>
         <button onclick="location.href='https://shovaleinat.github.io/Guess-The-Number'" class="links">
             Go to Guess The Number
+        </button>
+    </div>
+
+    <div>
+        <h2>--------------------------</h2>
+        <button onclick="location.href='https://shovaleinat.github.io/Countdown-Timer'" class="links">
+            Go to Countdown Timer
         </button>
     </div>
 
