--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="warrper">
         <h2>--------------------------</h2>
-        <button onclick="location.href='https://shovaleinat.github.io/Random-Number-Generator'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Random-Number'" class="links">
             Go to Random Number Generator
         </button>        
     
