--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <div>
         <h2>--------------------------</h2>
-        <button onclick="location.href='https://shovaleinat.github.io/Chess-Clock'" class="links">
-            Go to Chess Clock
+        <button onclick="location.href='https://shovaleinat.github.io/Chess-Timer'" class="links">
+            Go to Chess Timer
         </button>
     </div>
 
