--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
             Go to Countdown Timer
         </button>
     </div>
+        
+    <div>
+        <h2>--------------------------</h2>
+        <button onclick="location.href='https://shovaleinat.github.io/Word-Counter'" class="links">
+            Go to Word Counter
+        </button>
+    </div>
 
     </div>
 </body>
