--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
             Go to Word Counter
         </button>
     </div>
+        
+    <div>
+        <h2>--------------------------</h2>
+        <button onclick="location.href='https://shovaleinat.github.io/Tic-Tac-Toe'" class="links">
+            Go to Tic Tac Toe
+        </button>
+    </div>
 
     </div>
 </body>
