--- a/index.html
+++ b/index.html
@@ -14,34 +14,34 @@
 
     <div id="warrper">
         <h2>--------------------------</h2>
-        <button onclick="location.href='http://localhost:52330/myProject/mathGame/index.html'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Random-Number'" class="links">
             Go to Random Number Generator
         </button>        
     
     <div>
         <h2>--------------------------</h2>
-        <button onclick="location.href='http://localhost:52330/myProject/wordQuiz/index.html'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Word-Quiz'" class="links">
             Go to Word Quiz
         </button>
     </div>
 
     <div>
         <h2>--------------------------</h2>
-        <button onclick="location.href='http://localhost:52330/myProject/mathGame/index.html'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Math-Game'" class="links">
             Go to Math Game
         </button>
     </div>
 
     <div>
         <h2>--------------------------</h2>
-        <button onclick="location.href='http://localhost:52330/myProject/connect4/index.html'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Connect-4'" class="links">
             Go to Connect 4
         </button>
     </div>
 
     <div>
         <h2>--------------------------</h2>
-        <button onclick="location.href='http://localhost:52330/myProject/chessTimer/index.html'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Chess-Number'" class="links">
             Go to Chess Timer
         </button>
     </div>
@@ -49,35 +49,35 @@
 
     <div>
         <h2>--------------------------</h2>
-        <button onclick="location.href='http://localhost:52330/myProject/guessTheNumber/index.html'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Guess-The-Number'" class="links">
             Go to Guess The Number
         </button>
     </div>
 
     <div>
         <h2>--------------------------</h2>
-        <button onclick="location.href='http://localhost:52330/myProject/countdownTimer/index.html'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Countdown-Timer'" class="links">
             Go to Countdown Timer
         </button>
     </div>
 
     <div>
         <h2>--------------------------</h2>
-        <button onclick="location.href='http://localhost:52330/myProject/wordCounter/index.html'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Word-Counter'" class="links">
             Go to Word Counter
         </button>
     </div>
 
     <div>
         <h2>--------------------------</h2>
-        <button onclick="location.href='http://localhost:52330/myProject/ticTacToe/index.html'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Tic-Tac-Toe'" class="links">
             Go to Tic Tac toe
         </button>
     </div>
 
     <div>
         <h2>--------------------------</h2>
-        <button onclick="location.href='http://localhost:52330/myProject/cookieclicker/index.html'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Cookie-Clicker'" class="links">
             Go to Cookie Clicker
         </button>
     </div>
