--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div>
         <h2>--------------------------</h2>
-        <button onclick="location.href='https://shovaleinat.github.io/Chess-Number'" class="links">
+        <button onclick="location.href='https://shovaleinat.github.io/Chess-Timer'" class="links">
             Go to Chess Timer
         </button>
     </div>
