--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
         </button>
     </div>
 
+    <div>
+        <h2>--------------------------</h2>
+        <button onclick="location.href='https://shovaleinat.github.io/Password-Hack-1'" class="links">
+            Go to Password Hack
+        </button>
+    </div>
+
     </div>
 </body>
 </html>
