--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <body>
     <div class="box" id="box1">
         <div class="title">Random Number Generator</div>
-        <div class="description">Shovel's first website, with a small puzzle, and the site generate a random number up to 100.</div>
+        <div class="description">Shoval's first website, with a small puzzle, and the site generate a random number up to 100.</div>
         <a class="button" href="https://shovaleinat.github.io/Random-Number/">Go to Random Number Generator</a>
     </div>
     <div class="box" id="box2">
